.gitignore files created by various emacs packages

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 .ido.last
+.ido.last~
 auto-save-list
 bookmarks
 elpa
 saved-history
+saved-places
+session.*
+.#session.*
+\#session.*
 semanticdb
 tramp
 url/cookies
+var/pcache/cache
